sync: alinea v3 con base de candas v4 y separa red por entorno
Sincroniza cambios funcionales del proyecto base y configura backend/frontend con modo dev/lan para evitar mezcla de configuración local de trabajo en desarrollo.

Made-with: Cursor